--- a/public/templates/partials/footer.html
+++ b/public/templates/partials/footer.html
@@ -96,3 +96,20 @@
 		</div>
 	</div>
 </section>
+
+<div id="footerPopup" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
+            </div>
+            <div class="contmid" style="text-align: center">
+                {{footerCtrl.msgPopup}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btcenter bt" data-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
