--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -161,10 +161,20 @@ section{overflow:hidden}
 .cat .cart .product-content .left{width:30%;}
 .cat .cart .product-content .left .img{margin-right:5px;}
 .cat .cart .product-content .right{width: 70%;}
-.cat .cart .product-content{border-top:1px #d7d7d7 solid;padding:10px 0px;}
+.cat .cart .product-content{border-top:1px #d7d7d7 solid;padding:10px 0px;position: relative;}
 .cat .cart .product-content .discount{font-size:14px;font-weight:700}
 .cat .cart .product-content span{font-size:12px;text-decoration:line-through;}
-
+.cat .cart .product-content .product-cart-quantity{display: inline-block;text-align: center;margin-top: 0;margin-bottom: 0;margin-right: 0;}
+.cat .cart .product-content .product-cart-quantity .cart-quantity-up{display: block;color: transparent;cursor: default;}
+.cat .cart .product-content .product-cart-quantity .cart-quantity-down{display: block;color: transparent;cursor: default;}
+.cat .cart .product-content .product-cart-quantity .cart-quantity-number{margin: 0.5rem 0;}
+.cat .cart .product-content .cart-image{display: inline-block;vertical-align: top;text-align: center;margin: .5rem .5rem .5rem 1rem;}
+.cat .cart .product-content .cart-image .img-holder{margin:0;height: 56px;width: 56px;}
+.cat .cart .product-content .product-remove{display: none;position: absolute;right: 1rem;top: 50%;-webkit-transform: translateY(-50%);-moz-transform: translateY(-50%);-ms-transform: translateY(-50%);-o-transform: translateY(-50%);transform: translateY(-50%);color: #ccc;}
+.img-holder .img-helper{vertical-align: middle;height: 100%;display: inline-block;}
+.cat .cart .product-content .product-price{display: inline-block;vertical-align: top;}
+.cat .cart .product-content:hover>.product-remove{display: block;}
+.cat .cart .product-content:hover>.product-cart-quantity .cart-quantity-up,.cat .cart .product-content:hover>.product-cart-quantity .cart-quantity-down{color:black;}
 .icheckbox_square{position:_absolute;top:-1px;left:0}
 .iradio_square{left:37px}
 .iradio_square{position:_absolute;top:-1px;left:0}
@@ -388,3 +398,174 @@ section{overflow:hidden}
 	.product-deal-middle .w50{width:25%}
 	.product-deal .w50 .w50 .w50{width:100%}
 }
+/*=== popup up===*/
+[data-toggle="buttons"] > .btn input[type="radio"],
+[data-toggle="buttons"] > .btn-group > .btn input[type="radio"],
+[data-toggle="buttons"] > .btn input[type="checkbox"],
+[data-toggle="buttons"] > .btn-group > .btn input[type="checkbox"] {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  pointer-events: none;
+}
+.close {
+  float: right;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  filter: alpha(opacity=20);
+  opacity: .2;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+button.close {
+  -webkit-appearance: none;
+  padding: 0;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+}
+.modal-open {
+  overflow: hidden;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+}
+.modal.fade .modal-dialog {
+  -webkit-transition: -webkit-transform .3s ease-out;
+       -o-transition:      -o-transform .3s ease-out;
+          transition:         transform .3s ease-out;
+  -webkit-transform: translate(0, -25%);
+      -ms-transform: translate(0, -25%);
+       -o-transform: translate(0, -25%);
+          transform: translate(0, -25%);
+}
+.modal.in .modal-dialog {
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+       -o-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 10px;
+}
+.modal-content {
+  position: relative;
+  background-color: #fff;
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, .2);
+  border-radius: 6px;
+  outline: 0;
+  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+          box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+}
+.modal-backdrop.fade {
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+.modal-backdrop.in {
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+.modal-header {
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.modal-header .close {
+  margin-top: -2px;
+}
+.modal-title {
+  margin: 0;
+  line-height: 1.42857143;
+}
+.modal-body {
+  position: relative;
+  padding: 15px;
+}
+.modal-footer {
+  padding: 15px;
+  text-align: right;
+  border-top: 1px solid #e5e5e5;
+}
+.modal-footer .btn + .btn {
+  margin-bottom: 0;
+  margin-left: 5px;
+}
+.modal-footer .btn-group .btn + .btn {
+  margin-left: -1px;
+}
+.modal-footer .btn-block + .btn-block {
+  margin-left: 0;
+}
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+  .modal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+  }
+  .modal-sm {
+    width: 300px;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
+.btcenter{
+	width: 100% !important;
+	color: #007aff;
+}
+.modal { padding-right:0 !important}
+.modal-dialog { top:10% !important; position:relative;}
+.modal-header { padding:7px;}
+.modal-header h4 { font-weight:bold; text-align: center;}
+.modal-content .contmid { padding:15px}
+.modal-footer { padding:0px;}
+.modal-footer .bt{ text-align:center;display:inline-block; width:49%; padding:10px; border:none; background-color:transparent; font-weight:bold}
+
+.modal-footer .btright { border-left:1px solid #ddd}
+#popupInfo{top: 20%}
