--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -73,7 +73,7 @@ section{overflow:hidden}
 .menu-primary  li {padding: 0px 5px 0px 40px;line-height:45px;}
 .menu-primary  li a{color:#112530;display: inline-block;height: 100%;width: 100%;}
 .menu-primary  li img{width:auto;padding-right:10px}
-.menu-primary  li:hover a{color:#fff}
+.menu-primary  li.active a,.menu-primary  li:hover a{color:#fff}
 .menu-primary  li:hover,.menu-primary  li.active{background-color:#ec2c39;}
 .menu-primary  li.active:before,.menu-primary  li:hover:before{content:"\A";border-style: solid;border-width: 20px 0 25px 5px;border-color: transparent transparent transparent #ec2c39;position: absolute;right: -5px;}
 .cat-more{line-height:50px;font-size:15px;font-weight:700}
@@ -316,10 +316,10 @@ section{overflow:hidden}
 .progress .bar {background-image: none;background-color: #2a91d8;box-shadow: none;line-height: 18px;float: left;width: 0;height: 100%;font-size: 12px;color: #fff;text-align: center;text-shadow: 0 -1px 0 rgba(0,0,0,0.25);background-color: #0e90d2;background-image: -moz-linear-gradient(top,#149bdf,#0480be);background-image: -webkit-gradient(linear,0 0,0 100%,from(#149bdf),to(#0480be));background-image: -webkit-linear-gradient(top,#149bdf,#0480be);background-image: -o-linear-gradient(top,#149bdf,#0480be);background-image: linear-gradient(to bottom,#149bdf,#0480be);background-repeat: repeat-x;filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff149bdf',endColorstr='#ff0480be',GradientType=0);-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);-moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;-webkit-transition: width .6s ease;-moz-transition: width .6s ease;-o-transition: width .6s ease;transition: width .6s ease;}
 
 /* The Modal (background) */
-.modal {display: none;position: fixed;z-index: 1;left: 0;top: 0;width: 100%;height: 100%;overflow: auto;background-color: rgb(0,0,0);background-color: rgba(0,0,0,0.4);}
+.modal {display: none;position: fixed;z-index: 99999;left: 0;top: 0;width: 100%;height: 100%;overflow: auto;background-color: rgb(0,0,0);background-color: rgba(0,0,0,0.6);}
 .modal .title{text-transform: uppercase;padding: 10px 0px;border-bottom: 1px solid #ebebeb;}
 .modal .close-modal  {display:none}
-.modal .modal-content {background-color: #fefefe;margin: 5% auto;padding: 10px;width: 60%;}
+.modal .modal-content {background-color: #fefefe;margin: 5% auto;padding: 10px;width: 55%;}
 .modal .modal-content .content{padding: 20px 10px;}
 .modal .modal-content.location{color: #fff;background: url(../images/bg_location.png) bottom center no-repeat;min-height: 450px;}
 .modal .modal-content.location .close {float: right;background: url(../images/icon_close.png) center no-repeat;width: 40px;height: 39px;cursor: pointer;}
