--- a/public/templates/products/index.html
+++ b/public/templates/products/index.html
@@ -120,20 +120,21 @@
 		</div>
 	</div>
 </section>
-<!-- Pop up -->
-<div id="popupProductList" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content" style="margin-top:180px;">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
-            </div>
-            <div class="contmid" style="text-align: center">
-                {{ctrl.msgPopup}}
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btcenter bt" data-dismiss="modal">Đóng</button>
-            </div>
-        </div>
-    </div>
+<!-- The Modal -->
+<div id="popupInfo" class="modal">
+	<!-- Modal content -->
+	<div class="modal-content">
+		<div class="clearfix"></div>
+		<div class="title">Thông báo <a class="close right" rel="modal:close"><i class="fa fa-times"></i></a></div>
+		<div class="text-center content">{{ctrl.msgPopup}}</div>
+	</div>
 </div>
+<script>
+	$(document).ready(function(){
+		$('.product input').iCheck({
+			checkboxClass: 'icheckbox_square',
+			radioClass: 'iradio_square',
+			increaseArea: '20%'
+		});
+	});
+</script>
