update get cart from local

--- a/public/templates/cart/index.html
+++ b/public/templates/cart/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="clearfix"></div>
 				<div class="border-detail">
-					<div class="product-detail" ng-repeat="cartDetail in ctrl.cart" ng-if="cartDetail.quantity > 0">
+					<div class="product-detail" ng-repeat="cartDetail in ctrl.localCart" ng-if="cartDetail.quantity > 0">
 						<div class="left img w10"><img ng-click="ctrl.openDetail(cartDetail.id)" ng-src="{{cartDetail.image}}" /></div>
 						<div class="left name w60"><div class="pl10"><a href="javascript:;" ng-click="ctrl.openDetail(cartDetail.id)">{{cartDetail.name}}</div></a></div>
 						<div class="left price w10" ng-if="cartDetail.product_quantity > 0"><span>{{cartDetail.price | currency: "": 0 }}</span> <span></span></div>
