--- a/public/templates/products/detail.html
+++ b/public/templates/products/detail.html
@@ -60,7 +60,7 @@
 										</div>
 										<div class="clearfix"></div>
 									</div>
-									<div class="add-to-cart" ng-disabled="ctrl.isAddingCart" ng-click="ctrl.addProductToCart(ctrl.product.id)">
+									<div class="add-to-cart" ng-disabled="ctrl.isAddingCart" ng-click="ctrl.addProductToCart(ctrl.product)">
 										<div class="left img"><img src="/assets/images/icon_cart_white.png"></div>
 										<div class="left text">Cho vào giỏ hàng</div>
 									</div>
