--- a/public/templates/partials/footer.html
+++ b/public/templates/partials/footer.html
@@ -89,7 +89,7 @@
 			</div>
 			<div class="w50 right">
 				<form class="from-register">
-					<input type="text" ng-model="footerCtrl.email" />
+					<input type="text" ng-model="footerCtrl.email" placeholder="Vui lòng nhập E-mail" />
 					<button ng-click="footerCtrl.addEmail(footerCtrl.email)">Xác nhận</button>
 				</form>
 			</div>
