--- a/public/templates/partials/header.html
+++ b/public/templates/partials/header.html
@@ -10,7 +10,7 @@
 			<div class="left w21">
 				<a href="javascript:;" ng-click="headerCtrl.openHome()"><img src="/assets/images/logo.png" /></a>
 			</div>
-			<div class="right w24 cart">
+			<div class="right w24 cart" >
 				<a href="javascript:;" ng-click="headerCtrl.openCart()">
 					<img src="/assets/images/icon_cart.png"/>
 					<span>Giỏ hàng</span>
@@ -25,8 +25,9 @@
 				<span ng-if="headerCtrl.profileData.email">
 					<a href="javascripts:;" >
 						<img src="/assets/images/icon_user.png"/>
-						{{headerCtrl.profileData.username.substring(0,15)}}
+						{{headerCtrl.profileData.username.substring(0,14)}}
 					</a>
+					<span>| <a href="javascripts:;" ng-click="headerCtrl.openLogout()">Đăng xuất</a></span>
 				</span>
 			</div>
 			<div class="left w55">
