--- a/public/templates/login/login.html
+++ b/public/templates/login/login.html
@@ -38,7 +38,7 @@
 				</div>
 
 				<div style="color: red">{{ctrl.message}}</div>
-				<p class="text-right"><a href="">Quên mật khẩu?</a></p>
+				<p class="text-right"><a href="" ng-click="ctrl.openForgotPassword()">Quên mật khẩu?</a></p>
 				<!--<button id="login" ng-click="ctrl.login()" ng-disabled="myForm.$invalid">ĐĂNG NHẬP</button>-->
 				<input id="login" ng-click="ctrl.login()" type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary btn-sm btn-submit" value="ĐĂNG NHẬP">
 				<p class="login-more">Đăng nhập với  &nbsp &nbsp
