--- a/public/templates/login/forgotpassword.html
+++ b/public/templates/login/forgotpassword.html
@@ -6,7 +6,7 @@
         </a>
     </div>
     <div class="wrapper">
-        <div class="register">
+        <div class="register" ng-if="ctrl.forgotData != 'Mật khẩu mới đã được gửi về email! Bạn vui lòng kiểm tra email!'">
             <p class="">Quên mật khẩu</p>
             <form class="from-register" name="myForm">
                 <input type="hidden" ng-model="ctrl.user.id"/>
@@ -54,6 +54,11 @@
                 background: darkgray;
                 }
             </style>
+        </div>
+        <div class="register" ng-if="ctrl.forgotData === 'Mật khẩu mới đã được gửi về email! Bạn vui lòng kiểm tra email!'">
+            <div style="color: darkgreen; text-align: center">{{ctrl.forgotData}}</div>
+            <div class="clearfix"></div>
+            <button type="button" style="cursor: pointer;" class="btn btn-primary btn-sm btn-submit" ng-click="ctrl.openLogin()">Đăng nhập</button>
         </div>
     </div>
 </div>
