--- a/public/templates/partials/header.html
+++ b/public/templates/partials/header.html
@@ -15,17 +15,17 @@
 					<img src="/assets/images/icon_cart.png"/>
 					<span>Giỏ hàng</span>
 				</a>
-				<span ng-if="!headerCtrl.profileData.email">
+				<span ng-if="!headerCtrl.profileData.email || !headerCtrl.token">
 					<a href="javascripts:;" ng-click="headerCtrl.openLogin()">
 						<img src="/assets/images/icon_user.png"/>
 						<span>Đăng nhập</span>
 					</a>
 					<span>| <a href="javascripts:;" ng-click="headerCtrl.openRegister()">Đăng ký</a></span>
 				</span>
-				<span ng-if="headerCtrl.profileData.email">
+				<span ng-if="headerCtrl.profileData.email && headerCtrl.token">
 					<a href="javascripts:;" >
 						<img src="/assets/images/icon_user.png"/>
-						{{headerCtrl.profileData.username.substring(0,14)}}
+						{{headerCtrl.profileData.username}}
 					</a>
 					<span>| <a href="javascripts:;" ng-click="headerCtrl.openLogout()">Đăng xuất</a></span>
 				</span>
