--- a/prototype/vnshop/css/main.css
+++ b/prototype/vnshop/css/main.css
@@ -3,108 +3,43 @@ body {
     padding-top: 89px;
 }
 
-/* Font size, style, color */
+label {
+    margin-bottom: 0;
+}
 
 .content,
-.content-title,
-.content-footer {
-    font-family: 'SFUHelvetica';
+.content-bold,
+.content{
+    font-family: 'SFUHelvetica', sans-serif;
+    color: #58595b;
 }
 
+p.content,
 .content {
-    font-size: 16px;
-}
-
-.content-title {
-    font-size: 16px;
-    text-transform: uppercase;
-}
-
-.content-footer {
-    font-size: 14px;
-    color: #a7a8aa;
-}
-
-.content-discount-tag {
-    position: absolute;
-    bottom: 0;
-    right: 10px;
-    font-size: 14px;
-    color: white;
-    z-index: 2;
-}
-
-.text-bold {
-    font-weight: 700;
-}
-
-.text-grey {
-    color: #939598;
-}
-
-.text-grey-more {
-    color: #58595b;
-}
-
-.text-grey-less {
-    color: #58595b;
-}
-
-.text-blue {
-    color: #7a97b8;
-}
-
-.text-red {
-    color: #e62331;
-}
-
-.bg-white {
-    background-color: white;
-}
-
-.bg-red {
-    background-color: #FE641A !important;
-}
-
-.bg-blue {
-    background-color: #7a97b8 !important;
-}
-
-.bg-grey {
-    background-color: #b7b7b7 !important;
-}
-
-.font-size-12 {
-    font-size: 12px;
-}
-
-.font-size-14 {
+    margin-bottom: 8px;
     font-size: 14px;
 }
 
-.font-size-18 {
+p.content-bold,
+.content-bold {
+    font-weight: bold;
+    margin-bottom: 8px;
+    font-size: 14px;
+}
+
+h2.content {
+    margin-bottom: 8px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+h3.content {
+    margin-bottom: 8px;
     font-size: 18px;
-}
-
-.font-size-24 {
-    font-size: 24px;
-}
-
-.font-size-60 {
-    font-size: 40px;
-    line-height: 60px;
-}
-
-.font-size-96 {
-    font-size: 96px;
-}
-
-.icon-size-24 span:before {
-    font-size: 24px;
+    font-weight: bold;
 }
 
 /* Style global */
-
 .breadcrumb {
     background: transparent;
     margin: 0;
@@ -138,7 +73,7 @@ body {
 }
 
 .cat-box-small {
-    width: 20%;
+    flex: 0 0 20%;
     padding: 8px;
 }
 
@@ -146,18 +81,8 @@ body {
 
 }
 
-.product-name {
-    font-size: 14px;
-}
-
-.product-price {
-    font-size: 16px;
-    color: grey;
-}
-
-.product-price-discount {
+p.text-price-discount {
     font-size: 12px;
-    line-height: 16px;
     color: lightgrey;
     text-decoration: line-through;
 }
@@ -182,9 +107,13 @@ body {
     border-left: 1px solid lightgrey;
 }
 
+.nav-icon {
+
+}
+
 .nav-icon span:before {
     color: #bcbec0;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .field-search {
@@ -230,11 +159,12 @@ body {
     position: relative;
 }
 
-.img-discount-tag {
+p.content-discount-tag {
     position: absolute;
+    top: 0;
+    right: 10px;
+    color: white;
     z-index: 1;
-    bottom: 0;
-    right: 0;
 }
 
 .button-more {
@@ -255,7 +185,7 @@ body {
 
 .button-normal-grey-small {
     padding: 8px 16px;
-    color: #ebebeb;
+    color: white;
     background: #a1a1a1;
     text-transform: uppercase;
     border: transparent;
@@ -276,7 +206,7 @@ body {
     width: 48%;
     border: 1px solid #ebebeb;
     border-radius: 4px;
-    box-shadow: 2px 2px #ebebeb;
+    box-shadow: 2px 2px 8px #ebebeb;
     margin-bottom: 32px;
 }
 
@@ -287,7 +217,7 @@ body {
     flex-direction: column;
     border: 1px solid #ebebeb;
     border-radius: 4px;
-    box-shadow: 2px 2px #ebebeb;
+    box-shadow: 2px 2px 4px #ebebeb;
 }
 
 .box-group .box-card:last-child {
@@ -474,6 +404,7 @@ body {
 .border-box-blue {
     border: 1px solid lightgrey;
 }
+
 .border-box-red {
     border: 1px solid lightgrey;
 }
@@ -493,6 +424,92 @@ body {
     background: lightgrey;
 }
 
+.box-span {
+    height: 36px;
+    width: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid lightgrey;
+}
+
+/* Color */
+
+.text-bold {
+    font-weight: 700;
+}
+
+.text-grey {
+    color: #939598;
+}
+
+.text-grey-more {
+    color: #58595b;
+}
+
+.text-grey-less {
+    color: #58595b;
+}
+
+.text-blue {
+    color: #7a97b8;
+}
+
+.text-red {
+    color: #e62331;
+}
+
+.bg-white {
+    background-color: white;
+}
+
+.bg-red {
+    background-color: #FE641A !important;
+}
+
+.bg-blue {
+    background-color: #7a97b8 !important;
+}
+
+.bg-grey {
+    background-color: #b7b7b7 !important;
+}
+
+.bg-grey-light {
+    background-color: #e5e5e5 !important;
+}
+
+
+
+.font-size-12 {
+    font-size: 12px !important;
+}
+
+.font-size-14 {
+    font-size: 14px !important;
+}
+
+.font-size-18 {
+    font-size: 18px !important;
+}
+
+.font-size-24 {
+    font-size: 24px !important;
+}
+
+.font-size-60 {
+    font-size: 40px;
+    line-height: 60px;
+}
+
+.font-size-96 {
+    font-size: 96px;
+}
+
+.icon-size-24 span:before {
+    font-size: 24px;
+}
+
 /* Padding, Margin style */
 .pxy8 {
     padding: 8px;
@@ -501,6 +518,11 @@ body {
 .px8 {
     padding-left: 8px;
     padding-right: 8px;
+}
+
+.px13 {
+    padding-left: 13px;
+    padding-right: 13px;
 }
 
 .px16 {
@@ -549,6 +571,10 @@ body {
     padding-bottom: 16px;
 }
 
+.pb60 {
+    padding-bottom: 60px;
+}
+
 .pxy16 {
     padding: 16px;
 }
@@ -580,8 +606,16 @@ body {
     margin-top: 16px;
 }
 
+.mt26 {
+    margin-top: 26px;
+}
+
 .mt32 {
     margin-top: 32px;
+}
+
+.mt48 {
+    margin-top: 48px;
 }
 
 .mb8 {
@@ -633,8 +667,5 @@ body {
         margin-top: 16px;
     }
 
-    .cat-box-small {
-        width: 48%;
-    }
 
 }
